@@ -1,5 +1,10 @@
 2008-12-28  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/cairo-support.c (murrine_draw_glaze):
+	Fixed a bug in RGBA mode.
+
+2008-12-28  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* schema/murrine.xml.in.in:
 	* src/cairo-support.c (murrine_draw_bottom_glow),
 	(murrine_draw_centered_glow), (murrine_draw_horizontal_glow),
